Emprolijar consultas centralidad

--- a/consultas_ds.ipynb
+++ b/consultas_ds.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "db_url = 'neo4j@bolt://neo4j@localhost:7687'\n",
-    "db_pass = 'tweets'\n",
+    "db_pass = ''\n",
     "\n",
     "graph = Graph(db_url, password = db_pass)"
    ]
@@ -51,110 +51,29 @@
     }
    ],
    "source": [
-    "#consulta de prueba para ver que todo funcione\n",
+    "# Consulta de prueba para ver que todo funcione\n",
     "\n",
     "nro_nodos_user=\"MATCH(u:User) RETURN Count(u)\"\n",
     "nro_nodos_tweet=\"MATCH(t:Tweet) RETURN Count(t)\"\n",
     "\n",
-    "#evaluamos las consultas\n",
+    "# Evaluamos las consultas\n",
     "result_users=graph.evaluate(nro_nodos_user)\n",
     "result_tweets=graph.evaluate(nro_nodos_tweet)\n",
     "\n",
-    "#imprimo resultados\n",
+    "# Se imprimen los resultados\n",
     "print(f'En la BD hay {result_users} nodos User y {result_tweets} nodos Tweet')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 41,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>graphName</th>\n",
-       "      <th>database</th>\n",
-       "      <th>memoryUsage</th>\n",
-       "      <th>sizeInBytes</th>\n",
-       "      <th>nodeCount</th>\n",
-       "      <th>relationshipCount</th>\n",
-       "      <th>configuration</th>\n",
-       "      <th>density</th>\n",
-       "      <th>creationTime</th>\n",
-       "      <th>modificationTime</th>\n",
-       "      <th>schema</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>tweets</td>\n",
-       "      <td>neo4j</td>\n",
-       "      <td></td>\n",
-       "      <td>-1</td>\n",
-       "      <td>474112</td>\n",
-       "      <td>1098318</td>\n",
-       "      <td>{'relationshipProjection': {'QUOTE': {'orienta...</td>\n",
-       "      <td>0.000005</td>\n",
-       "      <td>2022-06-13T18:32:47.873189000-03:00</td>\n",
-       "      <td>2022-06-13T18:32:50.980297999-03:00</td>\n",
-       "      <td>{'relationships': {'QUOTE': {}, 'TAG': {}, 'ME...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  graphName database memoryUsage  sizeInBytes  nodeCount  relationshipCount  \\\n",
-       "0    tweets    neo4j                       -1     474112            1098318   \n",
-       "\n",
-       "                                       configuration   density  \\\n",
-       "0  {'relationshipProjection': {'QUOTE': {'orienta...  0.000005   \n",
-       "\n",
-       "                          creationTime                     modificationTime  \\\n",
-       "0  2022-06-13T18:32:47.873189000-03:00  2022-06-13T18:32:50.980297999-03:00   \n",
-       "\n",
-       "                                              schema  \n",
-       "0  {'relationships': {'QUOTE': {}, 'TAG': {}, 'ME...  "
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# query for dropping a projection from the catalog\n",
-    "query = (\n",
-    "    \"CALL gds.graph.drop('tweets') \"\n",
-    ")\n",
-    "\n",
-    "result = graph.run(query).to_data_frame()\n",
-    "\n",
-    "result"
+    "# Crear proyección de usuarios"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -191,10 +110,10 @@
        "      <th>0</th>\n",
        "      <td>MATCH (u:User) return id(u) as id</td>\n",
        "      <td>MATCH (u1:User)-[:TWEETED]-&gt;(t1:Tweet)&lt;-[:QUOT...</td>\n",
-       "      <td>tweets</td>\n",
+       "      <td>users</td>\n",
        "      <td>55860</td>\n",
        "      <td>187877</td>\n",
-       "      <td>3515</td>\n",
+       "      <td>2391</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -205,20 +124,20 @@
        "0  MATCH (u:User) return id(u) as id   \n",
        "\n",
        "                                   relationshipQuery graphName  nodeCount  \\\n",
-       "0  MATCH (u1:User)-[:TWEETED]->(t1:Tweet)<-[:QUOT...    tweets      55860   \n",
+       "0  MATCH (u1:User)-[:TWEETED]->(t1:Tweet)<-[:QUOT...     users      55860   \n",
        "\n",
        "   relationshipCount  projectMillis  \n",
-       "0             187877           3515  "
+       "0             187877           2391  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Create a projection of the graph and store it on the catalog\n",
-    "# We use the user projection described in https://towardsdatascience.com/using-neo4j-graph-database-to-analyze-twitter-data-6e3d38042af1\n",
+    "# Crear una proyección del grafo y almacenarla en el catalogo\n",
+    "# Se usa la proyección de usuarios descripta en https://towardsdatascience.com/using-neo4j-graph-database-to-analyze-twitter-data-6e3d38042af1\n",
     "user_projecion = 'MATCH (u:User) return id(u) as id'\n",
     "relationships_projection = (\n",
     "    \"MATCH (u1:User)-[:TWEETED]->(t1:Tweet)<-[:QUOTE|REPLY]-(t2:Tweet)<-[:TWEETED]-(u2:User) \"\n",
@@ -231,19 +150,18 @@
     "    \"RETURN id(u2) as source, id(u1) as target \"\n",
     ")\n",
     "\n",
-    "nodos_tweet = (\n",
-    "    f\"CALL gds.graph.project.cypher('tweets', '{user_projecion}', '{relationships_projection}') \"\n",
+    "query = (\n",
+    "    f\"CALL gds.graph.project.cypher('users', '{user_projecion}', '{relationships_projection}') \"\n",
     ")\n",
     "\n",
-    "#evaluamos las consultas\n",
-    "tweets=graph.run(nodos_tweet).to_data_frame() \n",
+    "results=graph.run(query).to_data_frame() \n",
     "\n",
-    "tweets"
+    "results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -284,26 +202,41 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>{'p99': 57, 'min': 0, 'max': 961, 'mean': 3.36...</td>\n",
+       "      <td>{'p99': 1, 'min': 0, 'max': 2, 'mean': 0.55114...</td>\n",
        "      <td>tweets</td>\n",
        "      <td>neo4j</td>\n",
-       "      <td>8786 KiB</td>\n",
-       "      <td>8997271</td>\n",
-       "      <td>55860</td>\n",
-       "      <td>187877</td>\n",
-       "      <td>{'relationshipQuery': 'MATCH (u1:User)-[:TWEET...</td>\n",
-       "      <td>0.000060</td>\n",
-       "      <td>2022-06-21T19:13:03.148202000-03:00</td>\n",
-       "      <td>2022-06-21T19:13:06.701191000-03:00</td>\n",
-       "      <td>{'relationships': {'__ALL__': {}}, 'nodes': {'...</td>\n",
+       "      <td>28 MiB</td>\n",
+       "      <td>29531381</td>\n",
+       "      <td>405369</td>\n",
+       "      <td>223417</td>\n",
+       "      <td>{'relationshipProjection': {'QUOTE': {'orienta...</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>2022-07-02T17:12:29.633493000-03:00</td>\n",
+       "      <td>2022-07-02T17:12:29.849765000-03:00</td>\n",
+       "      <td>{'relationships': {'QUOTE': {}, 'REPLY': {}}, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>{'p99': 23, 'min': 0, 'max': 3502, 'mean': 2.2...</td>\n",
+       "      <td>tweets_no_hashtags</td>\n",
+       "      <td>neo4j</td>\n",
+       "      <td>50 MiB</td>\n",
+       "      <td>52641467</td>\n",
+       "      <td>461229</td>\n",
+       "      <td>1056538</td>\n",
+       "      <td>{'relationshipProjection': {'QUOTE': {'orienta...</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>2022-07-02T16:36:33.663001000-03:00</td>\n",
+       "      <td>2022-07-02T16:36:35.266983000-03:00</td>\n",
+       "      <td>{'relationships': {'QUOTE': {}, 'MENTIONS': {}...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>{'p99': 22, 'min': 0, 'max': 3502, 'mean': 2.3...</td>\n",
        "      <td>complete</td>\n",
        "      <td>neo4j</td>\n",
        "      <td>63 MiB</td>\n",
-       "      <td>66118975</td>\n",
+       "      <td>66198479</td>\n",
        "      <td>474112</td>\n",
        "      <td>1098318</td>\n",
        "      <td>{'relationshipProjection': {'QUOTE': {'orienta...</td>\n",
@@ -312,48 +245,79 @@
        "      <td>2022-06-30T07:28:21.439054000-03:00</td>\n",
        "      <td>{'relationships': {'QUOTE': {}, 'TAG': {}, 'ME...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>{'p99': 57, 'min': 0, 'max': 961, 'mean': 3.36...</td>\n",
+       "      <td>users</td>\n",
+       "      <td>neo4j</td>\n",
+       "      <td>8717 KiB</td>\n",
+       "      <td>8926923</td>\n",
+       "      <td>55860</td>\n",
+       "      <td>187877</td>\n",
+       "      <td>{'relationshipQuery': 'MATCH (u1:User)-[:TWEET...</td>\n",
+       "      <td>0.000060</td>\n",
+       "      <td>2022-07-02T17:11:54.200901000-03:00</td>\n",
+       "      <td>2022-07-02T17:11:56.630519000-03:00</td>\n",
+       "      <td>{'relationships': {'__ALL__': {}}, 'nodes': {'...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                  degreeDistribution graphName database  \\\n",
-       "0  {'p99': 57, 'min': 0, 'max': 961, 'mean': 3.36...    tweets    neo4j   \n",
-       "1  {'p99': 22, 'min': 0, 'max': 3502, 'mean': 2.3...  complete    neo4j   \n",
+       "                                  degreeDistribution           graphName  \\\n",
+       "0  {'p99': 1, 'min': 0, 'max': 2, 'mean': 0.55114...              tweets   \n",
+       "1  {'p99': 23, 'min': 0, 'max': 3502, 'mean': 2.2...  tweets_no_hashtags   \n",
+       "2  {'p99': 22, 'min': 0, 'max': 3502, 'mean': 2.3...            complete   \n",
+       "3  {'p99': 57, 'min': 0, 'max': 961, 'mean': 3.36...               users   \n",
        "\n",
-       "  memoryUsage  sizeInBytes  nodeCount  relationshipCount  \\\n",
-       "0    8786 KiB      8997271      55860             187877   \n",
-       "1      63 MiB     66118975     474112            1098318   \n",
+       "  database memoryUsage  sizeInBytes  nodeCount  relationshipCount  \\\n",
+       "0    neo4j      28 MiB     29531381     405369             223417   \n",
+       "1    neo4j      50 MiB     52641467     461229            1056538   \n",
+       "2    neo4j      63 MiB     66198479     474112            1098318   \n",
+       "3    neo4j    8717 KiB      8926923      55860             187877   \n",
        "\n",
        "                                       configuration   density  \\\n",
-       "0  {'relationshipQuery': 'MATCH (u1:User)-[:TWEET...  0.000060   \n",
+       "0  {'relationshipProjection': {'QUOTE': {'orienta...  0.000001   \n",
        "1  {'relationshipProjection': {'QUOTE': {'orienta...  0.000005   \n",
+       "2  {'relationshipProjection': {'QUOTE': {'orienta...  0.000005   \n",
+       "3  {'relationshipQuery': 'MATCH (u1:User)-[:TWEET...  0.000060   \n",
        "\n",
        "                          creationTime                     modificationTime  \\\n",
-       "0  2022-06-21T19:13:03.148202000-03:00  2022-06-21T19:13:06.701191000-03:00   \n",
-       "1  2022-06-30T07:28:18.507761000-03:00  2022-06-30T07:28:21.439054000-03:00   \n",
+       "0  2022-07-02T17:12:29.633493000-03:00  2022-07-02T17:12:29.849765000-03:00   \n",
+       "1  2022-07-02T16:36:33.663001000-03:00  2022-07-02T16:36:35.266983000-03:00   \n",
+       "2  2022-06-30T07:28:18.507761000-03:00  2022-06-30T07:28:21.439054000-03:00   \n",
+       "3  2022-07-02T17:11:54.200901000-03:00  2022-07-02T17:11:56.630519000-03:00   \n",
        "\n",
        "                                              schema  \n",
-       "0  {'relationships': {'__ALL__': {}}, 'nodes': {'...  \n",
-       "1  {'relationships': {'QUOTE': {}, 'TAG': {}, 'ME...  "
+       "0  {'relationships': {'QUOTE': {}, 'REPLY': {}}, ...  \n",
+       "1  {'relationships': {'QUOTE': {}, 'MENTIONS': {}...  \n",
+       "2  {'relationships': {'QUOTE': {}, 'TAG': {}, 'ME...  \n",
+       "3  {'relationships': {'__ALL__': {}}, 'nodes': {'...  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Retrieve all graphs on the catalog to see if it was stored correctly\n",
+    "# Retornar todas las proyecciones del catalogo para validar\n",
     "\n",
     "query = (\n",
     "    \"CALL gds.graph.list() \"\n",
     ")\n",
     "\n",
-    "#evaluamos las consultas\n",
-    "tweets=graph.run(query).to_data_frame() \n",
+    "results=graph.run(query).to_data_frame() \n",
     "\n",
-    "tweets"
+    "results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Page Rank Centrality"
    ]
   },
   {
@@ -627,7 +591,7 @@
     }
    ],
    "source": [
-    "# Execute the PageRank centrality algorithm\n",
+    "# Ejecutamos el algoritmo de centralidad Page Rank\n",
     "user_info = (\n",
     "    \"MATCH (u:User)-[:TWEETED]->(t:Tweet) \"\n",
     "    \"WHERE u.username = node.username \"\n",
@@ -638,16 +602,22 @@
     ")\n",
     "\n",
     "query = (\n",
-    "    \"CALL gds.pageRank.stream('complete') \"\n",
+    "    \"CALL gds.pageRank.stream('users') \"\n",
     "    \"YIELD nodeId, score \"\n",
     "    \"WITH gds.util.asNode(nodeId) AS node, score \"\n",
     "    f\"{user_info}\"\n",
     ")\n",
     "\n",
-    "#evaluamos las consultas\n",
-    "tweets=graph.run(query).to_data_frame() \n",
+    "results=graph.run(query).to_data_frame() \n",
     "\n",
-    "tweets"
+    "results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Article Rank Centrality"
    ]
   },
   {
@@ -921,19 +891,24 @@
     }
    ],
    "source": [
-    "# Execute the ArticleRank centrality algorithm\n",
-    "\n",
+    "# Ejecutamos el algoritmo de centralidad ArticleRank\n",
     "query = (\n",
-    "    \"CALL gds.articleRank.stream('complete') \"\n",
+    "    \"CALL gds.articleRank.stream('users') \"\n",
     "    \"YIELD nodeId, score \"\n",
     "    \"WITH gds.util.asNode(nodeId) AS node, score \"\n",
     "    f\"{user_info}\"\n",
     ")\n",
     "\n",
-    "#evaluamos las consultas\n",
-    "tweets=graph.run(query).to_data_frame() \n",
+    "results=graph.run(query).to_data_frame() \n",
     "\n",
-    "tweets"
+    "results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Betweenness Centrality"
    ]
   },
   {
@@ -1207,19 +1182,24 @@
     }
    ],
    "source": [
-    "# Execute the Betweenness centrality algorithm\n",
-    "\n",
+    "# Ejecutamos el algoritmo de centralidad Betweenness\n",
     "query = (\n",
-    "    \"CALL gds.betweenness.stream('complete') \"\n",
+    "    \"CALL gds.betweenness.stream('users') \"\n",
     "    \"YIELD nodeId, score \"\n",
     "    \"WITH gds.util.asNode(nodeId) AS node, score \"\n",
     "    f\"{user_info}\"\n",
     ")\n",
     "\n",
-    "#evaluamos las consultas\n",
-    "tweets=graph.run(query).to_data_frame() \n",
+    "results=graph.run(query).to_data_frame() \n",
     "\n",
-    "tweets"
+    "results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Degree Centrality"
    ]
   },
   {
@@ -1493,94 +1473,18 @@
     }
    ],
    "source": [
-    "# Execute the Degree centrality algorithm\n",
-    "\n",
+    "# Ejecutamos el algoritmo de centralidad Degree\n",
     "query = (\n",
-    "    \"CALL gds.degree.stream('complete') \"\n",
+    "    \"CALL gds.degree.stream('users') \"\n",
     "    \"YIELD nodeId, score \"\n",
     "    \"WITH gds.util.asNode(nodeId) AS node, score \"\n",
     "    f\"{user_info}\"\n",
     ")\n",
     "\n",
     "#evaluamos las consultas\n",
-    "tweets=graph.run(query).to_data_frame() \n",
+    "results=graph.run(query).to_data_frame() \n",
     "\n",
-    "tweets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>nodeProjection</th>\n",
-       "      <th>relationshipProjection</th>\n",
-       "      <th>graphName</th>\n",
-       "      <th>nodeCount</th>\n",
-       "      <th>relationshipCount</th>\n",
-       "      <th>projectMillis</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>{'Hashtag': {'label': 'Hashtag', 'properties':...</td>\n",
-       "      <td>{'QUOTE': {'orientation': 'NATURAL', 'aggregat...</td>\n",
-       "      <td>complete</td>\n",
-       "      <td>474112</td>\n",
-       "      <td>1098318</td>\n",
-       "      <td>2770</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                      nodeProjection  \\\n",
-       "0  {'Hashtag': {'label': 'Hashtag', 'properties':...   \n",
-       "\n",
-       "                              relationshipProjection graphName  nodeCount  \\\n",
-       "0  {'QUOTE': {'orientation': 'NATURAL', 'aggregat...  complete     474112   \n",
-       "\n",
-       "   relationshipCount  projectMillis  \n",
-       "0            1098318           2770  "
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nodos_tweet = (\n",
-    "    f\"CALL gds.graph.project('complete', ['User', 'Tweet', 'Hashtag'], ['TWEETED', 'MENTIONS', 'QUOTE', 'REPLY', 'TAG']) \"\n",
-    ")\n",
-    "\n",
-    "#evaluamos las consultas\n",
-    "tweets=graph.run(nodos_tweet).to_data_frame() \n",
-    "\n",
-    "tweets"
+    "results"
    ]
   }
  ],
